Final Update for HTML Assignment

--- a/HTML Assignment/gallery.html
+++ b/HTML Assignment/gallery.html
@@ -24,27 +24,27 @@
         </h2>
 
         <figure>
-            <img src="images/photo1.jpg" alt="A beautiful sunrise over the mountains" width="300" height="200" title="Sunrise">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="A beautiful sunrise over the mountains" width="300" height="200" title="Sunrise">
             <figcaption>Sunrise over the mountains</figcaption>
         </figure>
 
         <figure>
-            <img src="images/photo2.jpg" alt="A serene beach with crystal clear water" width="300" height="200" title="Beach">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="A serene beach with crystal clear water" width="300" height="200" title="Beach">
             <figcaption>Serene beach</figcaption>
         </figure>
 
         <figure>
-            <img src="images/photo3.jpg" alt="A dense forest with sunlight filtering through the trees" width="300" height="200" title="Forest">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="A dense forest with sunlight filtering through the trees" width="300" height="200" title="Forest">
             <figcaption>Dense forest</figcaption>
         </figure>
 
         <figure>
-            <img src="images/photo2.jpg" alt="A serene beach with crystal clear water" width="300" height="200" title="Beach">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="A serene beach with crystal clear water" width="300" height="200" title="Beach">
             <figcaption>Serene beach</figcaption>
         </figure>
 
         <figure>
-            <img src="images/photo3.jpg" alt="A dense forest with sunlight filtering through the trees" width="300" height="200" title="Forest">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="A dense forest with sunlight filtering through the trees" width="300" height="200" title="Forest">
             <figcaption>Dense forest</figcaption>
         </figure>
 
@@ -57,27 +57,27 @@
         </h2>
 
         <figure>
-            <img src="images/photo1.jpg" alt="A beautiful sunrise over the mountains" width="300" height="200" title="Sunrise">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="A beautiful sunrise over the mountains" width="300" height="200" title="Sunrise">
             <figcaption>Sunrise over the mountains</figcaption>
         </figure>
 
         <figure>
-            <img src="images/photo2.jpg" alt="A serene beach with crystal clear water" width="300" height="200" title="Beach">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="A serene beach with crystal clear water" width="300" height="200" title="Beach">
             <figcaption>Serene beach</figcaption>
         </figure>
 
         <figure>
-            <img src="images/photo3.jpg" alt="A dense forest with sunlight filtering through the trees" width="300" height="200" title="Forest">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="A dense forest with sunlight filtering through the trees" width="300" height="200" title="Forest">
             <figcaption>Dense forest</figcaption>
         </figure>
 
         <figure>
-            <img src="images/photo2.jpg" alt="A serene beach with crystal clear water" width="300" height="200" title="Beach">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="A serene beach with crystal clear water" width="300" height="200" title="Beach">
             <figcaption>Serene beach</figcaption>
         </figure>
 
         <figure>
-            <img src="images/photo3.jpg" alt="A dense forest with sunlight filtering through the trees" width="300" height="200" title="Forest">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="A dense forest with sunlight filtering through the trees" width="300" height="200" title="Forest">
             <figcaption>Dense forest</figcaption>
         </figure>
 
@@ -90,27 +90,27 @@
         </h2>
 
         <figure>
-            <img src="images/photo1.jpg" alt="A beautiful sunrise over the mountains" width="300" height="200" title="Sunrise">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="A beautiful sunrise over the mountains" width="300" height="200" title="Sunrise">
             <figcaption>Sunrise over the mountains</figcaption>
         </figure>
 
         <figure>
-            <img src="images/photo2.jpg" alt="A serene beach with crystal clear water" width="300" height="200" title="Beach">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="A serene beach with crystal clear water" width="300" height="200" title="Beach">
             <figcaption>Serene beach</figcaption>
         </figure>
 
         <figure>
-            <img src="images/photo3.jpg" alt="A dense forest with sunlight filtering through the trees" width="300" height="200" title="Forest">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="A dense forest with sunlight filtering through the trees" width="300" height="200" title="Forest">
             <figcaption>Dense forest</figcaption>
         </figure>
 
         <figure>
-            <img src="images/photo2.jpg" alt="A serene beach with crystal clear water" width="300" height="200" title="Beach">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="A serene beach with crystal clear water" width="300" height="200" title="Beach">
             <figcaption>Serene beach</figcaption>
         </figure>
 
         <figure>
-            <img src="images/photo3.jpg" alt="A dense forest with sunlight filtering through the trees" width="300" height="200" title="Forest">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="A dense forest with sunlight filtering through the trees" width="300" height="200" title="Forest">
             <figcaption>Dense forest</figcaption>
         </figure>
 
