--- a/HTML Assignment/register.html
+++ b/HTML Assignment/register.html
@@ -9,7 +9,66 @@
     <h1>CodingGita Student Registration Form</h1>
     <p>Please fill out the form below to register for the CodingGita MERN Stack Program</p>
 
-    
+    <form action="#" method="post">
+<br><br>
+        <label for="name">Full Name</label>
+        <input type="text">
+<br><br>
+        <label for="email">Email Address</label>
+        <input type="email">
+<br><br>
+        <label for="password">Enter password</label>
+        <input type="password" required>
+<br><br>
+        <label for="phone">Phone Number</label>
+        <input type="number" required>
+<br><br>
+        <label for="Gender">Enter Gender</label>
+        <input type="radio" required>Male
+        <input type="radio" required>Female
+        <input type="radio" required>Other
+<br><br>
+        <label for="Hobbies">Tell us your Hobbies</label>
+        <input type="checkbox" required>Reading
+        <input type="checkbox" required>Traveling
+        <input type="checkbox" required>Cooking 
+<br><br>
+        <label for="date">Enter DOB</label>
+        <input type="date" required>
+<br><br>
+        <label for="upload">Upload Photo</label>
+        <input type="file" required>
+<br><br>
+        <label for="course">Select your course</label>
+        <select>
+            <option>MERN Stack</option>
+            <option>DSA</option>
+            <option>Web Development</option>
+        </select>
+<br><br>
+        <textarea rows="5" cols="30">
+            Enter Your Address
+        </textarea>
+<br><br>
+        <label for="study hours">Preferred Study Hours </label>
+        <input type="range">
+<br><br>
+        <label for="color">Show Your Favorite Color</label>
+        <input type="color">
+<br><br>
+        <label for="url">Portfolio Website</label>
+        <input type="url">
+<br><br>
+        <label for="search">Search Interests</label>
+        <input type="search">
+<br><br>
+        <label for="time">Preferred Study Time</label>
+        <input type="time">
+<br><br>
+        <input type="submit" value="Submit">
+        <input type="reset" value="Reset">
+<br><br> 
+    </form>
 
 </body>
 </html>
