--- a/HTML Assignment/travel blog/delhi.html
+++ b/HTML Assignment/travel blog/delhi.html
@@ -16,7 +16,7 @@
     <p>With its dynamic energy and historical significance, Delhi truly is the heart of India, inviting visitors to explore its many facets and create unforgettable memories.</p>
 <hr>
 
-<img src="img1" alt="">
+<img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="">
 
 <a href="index.html">Home</a>
 <a href="jaipur.html">Jaipur</a>
