--- a/HTML Assignment/travel blog/jaipur.html
+++ b/HTML Assignment/travel blog/jaipur.html
@@ -26,7 +26,7 @@
     </p>
     <hr>
 
-    <img src="img1" alt="">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="">
 
     <a href="index.html">Home</a>
     <a href="mumbai.html">mumbai</a>
