--- a/HTML Assignment/travel blog/mumbai.html
+++ b/HTML Assignment/travel blog/mumbai.html
@@ -36,7 +36,7 @@
     </p>
     <hr>
 
-    <img src="img1" alt="">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Cat03.jpg" alt="">
 
     <a href="index.html">Home</a>
     <a href="jaipur.html">Jaipur</a>
