corrected Media Library

--- a/HTML Assignment/medialibrary.html
+++ b/HTML Assignment/medialibrary.html
@@ -6,8 +6,13 @@
     <title>My Media Library</title>
 </head>
 <body>
-    <h1>Media Library Collection</h1>
+    <h1 id="top">Media Library Collection</h1>
     <p>This page contains my favorite images, songs, videos, and online embeds.</p>
+
+    <a href="#Image Gallery">Image Gallery</a>
+    <a href="#Audio Collection">Audio Collection</a>
+    <a href="#Video Collection">Video Collection</a>
+    <a href="#Online Embeds">Online Embeds</a>
 
     <section id="Image Gallery">
         
@@ -96,6 +101,10 @@
 <br><br>
         <h2 id="Wiki page">Example 3: Embedding a Wiki page</h2>
         <iframe src="https://en.wikipedia.org/wiki/Computer_science" width="600" height="500" style="border: none;"></iframe>
+    </section>
 
+    <footer>
+        <a href="#top">Back to Top</a>
+    </footer>
 </body>
 </html>
