Website-3 final commit

--- a/HTML Css Combined Assignment/Website-3/Mice.html
+++ b/HTML Css Combined Assignment/Website-3/Mice.html
@@ -49,7 +49,7 @@
             <li><a href="./Keyboard.html" style="color: black; text-decoration: none;">Keyboards</a></li>
             <li>Slim-Keyboards</li>
             <li>Accessories</li>
-            <li>Mice</li>
+            <li class="current">Mice</li>
             <li>Deals</li>
         </ul>
         </div>
@@ -159,6 +159,10 @@
                 <div class="items item1">
                     <img src="https://www.keychron.com/cdn/shop/files/Keychron-M6-wireless-8K-mouse-black..jpg?v=1750299031&width=300" alt="">
 
+                    <div class="option">
+                        <p>Choose Option</p>
+                    </div>
+                    
                     <h3>Keychron M6 Wireless Mouse</h3>
 
                     <div class="rating">
@@ -183,6 +187,10 @@
 
                 <div class="items item2">
                     <img src="https://www.keychron.com/cdn/shop/files/Keychron-M3-8K-wireless-mouse.jpg?v=1747303339&width=300" alt="">
+
+                    <div class="option">
+                        <p>Choose Option</p>
+                    </div>
 
                     <h3>Keychron M6 Wireless Mouse</h3>
 
@@ -209,6 +217,10 @@
                 <div class="items item3">
                     <img src="https://www.keychron.com/cdn/shop/files/Keychron-M4-wireless-mouse-black-1000-Hz-Polling-Rate.jpg?v=1754365150&width=300" alt="">
 
+                    <div class="option">
+                        <p>Choose Option</p>
+                    </div>
+
                     <h3>Keychron M6 Wireless Mouse</h3>
 
                     <div class="rating">
@@ -233,6 +245,10 @@
 
                 <div class="items item4">
                     <img src="https://www.keychron.com/cdn/shop/files/Keychron-M3-8K-wireless-mouse.jpg?v=1747303339&width=300" alt="">
+
+                    <div class="option">
+                        <p>Choose Option</p>
+                    </div>
 
                     <h3>Keychron M6 Wireless Mouse</h3>
 
@@ -259,6 +275,10 @@
                 <div class="items item5">
                     <img src="https://www.keychron.com/cdn/shop/files/Keychron-M6-wireless-8K-mouse-black..jpg?v=1750299031&width=300" alt="">
 
+                    <div class="option">
+                        <p>Choose Option</p>
+                    </div>
+
                     <h3>Keychron M6 Wireless Mouse</h3>
 
                     <div class="rating">
@@ -283,6 +303,10 @@
 
                 <div class="items item6">
                     <img src="https://www.keychron.com/cdn/shop/files/Keychron-M4-wireless-mouse-black-1000-Hz-Polling-Rate.jpg?v=1754365150&width=300" alt="">
+
+                    <div class="option">
+                        <p>Choose Option</p>
+                    </div>
 
                     <h3>Keychron M4 Wireless Mouse</h3>
 
@@ -309,6 +333,10 @@
                 <div class="items item1">
                     <img src="https://www.keychron.com/cdn/shop/files/Keychron-M6-wireless-8K-mouse-black..jpg?v=1750299031&width=300" alt="">
 
+                    <div class="option">
+                        <p>Choose Option</p>
+                    </div>
+
                     <h3>Keychron M6 Wireless Mouse</h3>
 
                     <div class="rating">
@@ -333,6 +361,10 @@
 
                 <div class="items item2">
                     <img src="https://www.keychron.com/cdn/shop/files/Keychron-M6-wireless-8K-mouse-black..jpg?v=1750299031&width=300" alt="">
+
+                    <div class="option">
+                        <p>Choose Option</p>
+                    </div>
 
                     <h3>Keychron M6 Wireless Mouse</h3>
 
@@ -359,6 +391,10 @@
                 <div class="items item3">
                     <img src="https://www.keychron.com/cdn/shop/files/Keychron-M6-wireless-8K-mouse-black..jpg?v=1750299031&width=300" alt="">
 
+                    <div class="option">
+                        <p>Choose Option</p>
+                    </div>
+
                     <h3>Keychron M6 Wireless Mouse</h3>
 
                     <div class="rating">
@@ -383,6 +419,10 @@
 
                 <div class="items item4">
                     <img src="https://www.keychron.com/cdn/shop/files/Keychron-M6-wireless-8K-mouse-black..jpg?v=1750299031&width=300" alt="">
+
+                    <div class="option">
+                        <p>Choose Option</p>
+                    </div>
 
                     <h3>Keychron M6 Wireless Mouse</h3>
 
@@ -409,6 +449,10 @@
                 <div class="items item5">
                     <img src="https://www.keychron.com/cdn/shop/files/Keychron-M6-wireless-8K-mouse-black..jpg?v=1750299031&width=300" alt="">
 
+                    <div class="option">
+                        <p>Choose Option</p>
+                    </div>
+
                     <h3>Keychron M6 Wireless Mouse</h3>
 
                     <div class="rating">
@@ -433,6 +477,10 @@
 
                 <div class="items item6">
                     <img src="https://www.keychron.com/cdn/shop/files/Keychron-M6-wireless-8K-mouse-black..jpg?v=1750299031&width=300" alt="">
+
+                    <div class="option">
+                        <p>Choose Option</p>
+                    </div>
 
                     <h3>Keychron M6 Wireless Mouse</h3>
 
