Sem1 Practicle code

--- a/HTML Css Combined Assignment/Website-5/index.html
+++ b/HTML Css Combined Assignment/Website-5/index.html
@@ -150,7 +150,7 @@
                     based on your feedback.</p>
             </div>
 
-            <div class="figure">
+            <div class="figure margin-top">
                 <div class="left parts">
                     <ul style="list-style-type: none;">
                         <li>
@@ -172,8 +172,7 @@
                     </ul>
 
                     <div class="yrs">
-                        <div class="circle1">
-                            db
+                        <div class="circle">
                         </div>
                         <div class="yr-text">
                             2022 Q3
@@ -196,6 +195,14 @@
                             CZ Testnet
                         </li>
                     </ul>
+
+                    <div class="yrs">
+                        <div class="circle" style="background-color: #33C5FE;">
+                        </div>
+                        <div class="yr-text">
+                            2022 Q3
+                        </div>
+                    </div>
                 </div>
 
                 <div class="right parts">
@@ -217,6 +224,14 @@
                             Q&A Board Jobs Board iPad Support
                         </li>
                     </ul>
+
+                    <div class="yrs">
+                        <div class="circle" style="background-color: #A405A4;">
+                        </div>
+                        <div class="yr-text">
+                            2022 Q3
+                        </div>
+                    </div>
                 </div>
             </div>
 
