--- a/HTML-Css-Combined-Assignment/Website-4/bundle+save.html
+++ b/HTML-Css-Combined-Assignment/Website-4/bundle+save.html
@@ -24,7 +24,7 @@
         <div class="navLeft">
 
             <ul style="list-style: none;">
-                <li class="current">Holiday Shop</li>
+                <li class="current"><a href="./index.html" style="color: black; text-decoration: none;">Holiday Shop</a></li>
                 <li>Shop All</li>
                 <li>Espresso Machine</li>
                 <li>Coffee Maker</li>
@@ -33,7 +33,7 @@
                 <li>Drinkware</li>
                 <li>Accessories</li>
                 <li>Bundle + Save</li>
-                <li>Coffee + Tea</li>
+                <liv><a href="./coffee+Tea.html" style="color: black; text-decoration: none;">Coffee + Tea</a></li>
             </ul>
 
         </div>
