--- a/HTML-Css-Combined-Assignment/Website-4/index.html
+++ b/HTML-Css-Combined-Assignment/Website-4/index.html
@@ -33,8 +33,8 @@
                 <li>Kettles</li>
                 <li>Drinkware</li>
                 <li>Accessories</li>
-                <li>Bundle + Save</li>
-                <li>Coffee + Tea</li>
+                <li><a href="./bundle+save.html" style="color: black; text-decoration: none;">Bundle + Save</a></li>
+                <li><a href="./coffee+Tea.html" style="color: black; text-decoration: none">Coffee + Tea</a></li>
             </ul>
 
         </div>
