post submission updates majorly website 6 completion

--- a/HTML-Css-Combined-Assignment/Website-6/artwork.html
+++ b/HTML-Css-Combined-Assignment/Website-6/artwork.html
@@ -132,7 +132,7 @@
             <div class="content">
                 <div class="nft-card">
                     <div class="image-container">
-                        <img src="https://pixura.imgix.net/https%3A%2F%2Fstorage.googleapis.com%2Fsr_prod_artworks_bucket%2Fasset%252Fb6a141b393087f492c517001baf8adabb96fad7302ba78b6c6a90cd86dc5d9fb.png?ixlib=js-3.8.0&auto=format&quality=100&fit=max&cs=origin&w=328&s=8441add5bfd5c5912db0fdcc274323d2"
+                        <img src="https://pixura.imgix.net/https%3A%2F%2Fstorage.googleapis.com%2Fsr_prod_artworks_bucket%2Fasset%252F9f3e46aba1d3af7c86e8f18b1697545ae37a023aeaf36ee7276e84ff241e97dd.jpeg?ixlib=js-3.8.0&auto=format&quality=100&fit=max&cs=origin&w=1247&s=b3184bdd47024ea16799be8612bff3fd"
                             alt="NFT Artwork">
                     </div>
                     <div class="details">
@@ -150,7 +150,7 @@
 
                 <div class="nft-card">
                     <div class="image-container">
-                        <img src="https://pixura.imgix.net/https%3A%2F%2Fstorage.googleapis.com%2Fsr_prod_artworks_bucket%2Fasset%252Fb6a141b393087f492c517001baf8adabb96fad7302ba78b6c6a90cd86dc5d9fb.png?ixlib=js-3.8.0&auto=format&quality=100&fit=max&cs=origin&w=328&s=8441add5bfd5c5912db0fdcc274323d2"
+                        <img src="https://pixura.imgix.net/https%3A%2F%2Fstorage.googleapis.com%2Fsr_prod_artworks_bucket%2Fasset%252F4ce028e41072f8eee5d74f64405add934ce79e905e325ead4e3be4737746232f.jpeg?ixlib=js-3.8.0&auto=format&quality=100&fit=max&cs=origin&w=1247&s=bf307fbf41e73a2980a88b6c4a21ffd0"
                             alt="NFT Artwork">
                     </div>
                     <div class="details">
@@ -168,7 +168,7 @@
 
                 <div class="nft-card">
                     <div class="image-container">
-                        <img src="https://pixura.imgix.net/https%3A%2F%2Fstorage.googleapis.com%2Fsr_prod_artworks_bucket%2Fasset%252Fb6a141b393087f492c517001baf8adabb96fad7302ba78b6c6a90cd86dc5d9fb.png?ixlib=js-3.8.0&auto=format&quality=100&fit=max&cs=origin&w=328&s=8441add5bfd5c5912db0fdcc274323d2"
+                        <img src="https://pixura.imgix.net/https%3A%2F%2Fstorage.googleapis.com%2Fsr_prod_artworks_bucket%2Fasset%252F9d8841dff56231c188809a8cb65cade05f46c814b3f84bbb0e31acb0c4679dea.jpeg?ixlib=js-3.8.0&auto=format&quality=100&fit=max&cs=origin&w=1247&s=f39b951b53d23cf9086d503789d1e538"
                             alt="NFT Artwork">
                     </div>
                     <div class="details">
@@ -186,7 +186,7 @@
 
                 <div class="nft-card">
                     <div class="image-container">
-                        <img src="https://pixura.imgix.net/https%3A%2F%2Fstorage.googleapis.com%2Fsr_prod_artworks_bucket%2Fasset%252Fb6a141b393087f492c517001baf8adabb96fad7302ba78b6c6a90cd86dc5d9fb.png?ixlib=js-3.8.0&auto=format&quality=100&fit=max&cs=origin&w=328&s=8441add5bfd5c5912db0fdcc274323d2"
+                        <img src="https://pixura.imgix.net/https%3A%2F%2Fstorage.googleapis.com%2Fsr_prod_artworks_bucket%2Fasset%252Fc0ab0a1543a0e9be6d7701ae872dd3968189fab06f7e7683865e1274343f309c.jpeg?ixlib=js-3.8.0&auto=format&quality=100&fit=max&cs=origin&w=1247&s=affb8dfc1093b82c34df4cdc99e9c52c"
                             alt="NFT Artwork">
                     </div>
                     <div class="details">
